--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-langchain-text-splitters
+faiss-cpu
+python-dotenv
+requests
+sentence-transformers
+langchain
 langchain-community
+langchain-google-genai
+langchain-huggingface
